[package]
name = "sat_track"
version = "0.1.0"
edition = "2021"
authors = ["Craig Osborn <craig@craigosborn.dev>"]
description = "Satellite tracking using SGP4"
license = "MIT"

[features]
default = ["web", "cli"]
web = ["serde", "reqwest"]
cli = ["clap"]

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
clap = { version = "4.5.19", features = ["cargo"], optional = true }
reqwest = { version = "0.12.8", features = [
    "blocking",
    "json",
], optional = true }
serde = { version = "1.0.210", optional = true }
sgp4 = "2.2.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
